# ap-2026-1-61

./: README.md  pyproject.toml
notebooks/: AP_Evaluación_1.ipynb  Carga_de_datos_con_Pandas.ipynb  Carga_de_otros_formatos_de_datos.ipynb  Construcción_de_modelos_de_aprendizaje_de_máquina_con_Scikit_Learn.ipynb  Modelos_de_regresión_Lasso.ipynb  Modelos_regularizados_y_sintonización_de_hiperparámetros.ipynb  Preparación_de_los_datos_con_Pandas.ipynb  Procesamiento_de_datos_categoricos.ipynb  Procesamiento_de_datos_numericos.ipynb  Uso_de_ColumnTransformer_para_preprocesar_datos.ipynb
src/: test_ruff.py
