[project]
name = "ap-2026-1-61"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas==2.3",
    "scikit-learn==1.7",
]

[tool.uv]
package = false
